--- a/tests/test.css
+++ b/tests/test.css
@@ -14,7 +14,7 @@ img .activator {
 .title {
     text-align: center;
     padding-left: 10px;
-    color: rgb(230,200,30);
+    color: white;
 }
 
 nav {
