--- a/styles/main.css
+++ b/styles/main.css
@@ -1,22 +1,23 @@
 *{
     border: 1px dotted pink;
+    color: red;
 
 }
 
-body{
-    /*background-image: url(/images/redlinetest.jpg);
-    background-position: top;*/
-    height:100vh;
-}
+html, body, .block {
+    height: 100%;
+  }
 
-.bg-img{
+/*.bg-img{
     height: 100vh;
     min-width: 100vw;
     position: fixed;
     z-index: -1;
-}
+}*/
 
-main{}
+img{
+    width:100%;
+}
 
 .main-body{
     display: grid;
@@ -37,10 +38,11 @@ main{}
 
 #map {
        height:100%;
+       grid-column: 1/3;
       }
 
 .map-container{
-    height:100%;
+    height:25vh;
 }
 
 .places-map{
@@ -52,5 +54,37 @@ main{}
     background: white;
     color: blue;
     text-align:center;
+}
 
+
+ .pin-top {
+   position: relative;
+ }
+
+ .pin-bottom {
+   position: relative;
+ }
+
+ .pinned {
+   position: fixed;
+ }
+
+ .places-events{
+     grid-column: 1/3;
+     /*position: relative;*/
+ }
+
+ .parallax-container {
+      height: 100%;
+    }
+
+.page-footer{
+     grid-column: 1/3;
+}
+.where{
+    position: relative;
+}
+
+.galleries-list{
+    100vh;
 }
