end of day most features operational

--- a/styles/mainspa.css
+++ b/styles/mainspa.css
@@ -28,7 +28,7 @@ img{
     grid-template-columns: 3fr 7fr;
     grid-template-rows: 1fr 1fr 1fr;
     height:75vh;
-    background-image: url('/images/gallery9blownout.jpg');
+    background-image: url('/images/gallery9.jpg');
     background-size:100vw;
     background-repeat: no-repeat;
 
