map stuff pretty much done

--- a/styles/mainspa.css
+++ b/styles/mainspa.css
@@ -12,6 +12,11 @@ img{
     margin: 2%;
 }
 
+#no-events{
+    text-align: center;
+    background: white;
+}
+
 .gallery-info{
     line-height: 125%;
     color:white;
@@ -22,7 +27,9 @@ img{
 .upcoming-info{
     color:white;
 }
-
+.info-window-img{
+    width:20em;
+}
 .splash{
     display: grid;
     grid-template-columns: 3fr 7fr;
@@ -40,7 +47,7 @@ img{
 .outofboundsalert{
     font-style: italic;
     text-align:center;
-    color:royalblue;
+    color:white;
 }
 
 .section-nav ul{
