--- a/styles/main.css
+++ b/styles/main.css
@@ -1,67 +1,111 @@
-@media (max-width: 700px){
-    .main-nav{
+@media (max-width: 700px) {
+    .main-nav {
         display: grid;
         grid-template-rows: .25fr 1fr;
         grid-template-columns: 1fr;
     }
-    .header{
+    .main-header {
         grid-row: 1/2;
-        width:100%;
+        width: 100%;
+        grid-column: 1/2;
+    }
+    .main-nav-buttons {
+        display: grid;
+        grid-template-rows: repeat(4, 1fr);
+        grid-template-columns: 1fr;
+        grid-row:2/3;
         grid-column:1/2;
     }
-
-
-    .main-nav-buttons{
+    .main-nav-buttons>li,a {
+        margin: 0;
+        width:95vw;
+    }
+    .fb-login-button{
+        width:auto;
+    }
+    #main-nav-about {
+        grid-row: 1/2;
+    }
+    #main-nav-upcoming {
+        grid-row: 2/3;
+    }
+    #main-nav-places {
+        grid-row: 3/4;
+    }
+    #main-nav-today {
+        grid-row: 4/5;
+    }
+    .section-nav li{
+        grid-row:span1;
+    }
+    .section-nav {
+        width:100%;
         display: grid;
-        grid-template-rows:repeat(4,1fr);
-        grid-template-columns:1fr;
+        grid-template-rows: repeat(4,1fr);;
     }
-    .main-nav-buttons > li{
-        margin:0;
-    }
-    #main-nav-about{
-        grid-row:1/2;
-    }
-    #main-nav-upcoming{
-        grid-row:2/3;
-    }
-    #main-nav-places{
-        grid-row:3/4;
-    }
-    #main-nav-today{
-        grid-row:4/5;
-    }
-
 }
 
-@media (max-width: 1200px) and (min-width:700px){
-    .main-nav{
+@media (max-width: 1200px) and (min-width:700px) {
+    .main-nav {
         display: grid;
         grid-template-rows: 1fr 1fr;
         grid-template-columns: repeat(3, 1fr);
     }
-    .header{
+    .main-header {
         display: grid;
         grid-row: 1/2;
-        width:100%;
-        grid-column:1/3;
+        width: 100%;
+        grid-column: 1/3;
     }
-    .main-nav-buttons{
+    .main-nav-buttons {
         display: flex;
         grid-row: 2/3;
-        grid-column:1/4;
+        grid-column: 1/4;
         justify-content: space-around;
+        align-self: center;
     }
-    .main-nav-buttons > li{
+    .main-nav-buttons>li, a {
+        display: flex;
         justify-content: center;
+    }
+    #title span{
+        text-align:center;
+        justify-content: center;
+    }
+    .section-nav {
+        width:100%;
+        display: flex;
+        justify-content: space-between;
     }
 }
 
-@media (min-width: 1200px){
-    .main-nav-buttons{
+@media (min-width: 1200px) {
+    .main-nav{
+        grid-template-columns: 1fr 2fr;
+    }
+    .main-nav-buttons {
         display: flex;
         grid-column: 2/3;
+        justify-content: space-between;
     }
+
+        .main-nav-buttons li{
+            justify-content: center;
+        }
+    #title{
+        grid-column: 1/2;
+    }
+    .section-nav {
+        display: flex;
+        list-style-type: none;
+        float: right;
+        align-self: flex-end;
+    }
+
+    .section-nav>li {
+        margin: 2em;
+    }
+
 }
 
 * {
@@ -69,77 +113,148 @@
     color: red;
 }
 
-#login-splash{
+#login-splash {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(5, 1fr);
     height: 100vh;
+    background: black;
 }
 
-.splash-bg{
+.map-bg{
+    height:100%;
+}
+
+.login-main-bar {
+    grid-column: 1/7;
+    grid-row: 1/6;
+    z-index: 1;
     position: absolute;
-    object-fit:cover;
+
+}
+
+.login-title {
+    /*position: absolute;
+    color: black;
+    letter-spacing: .75em;
+    font-size: 15em;
+    font-weight: lighter;
+    line-height: 50%;
+    width: 100vw;
+    text-align: justify;*/
+    display: flex;
+    justify-content: space-between;
+    width: 95vw;
+    position: absolute;
+    left:2.5vw;
+
+}
+
+.login-title>span {
+    color: black;
+    font-size: 450%;
+    font-weight: lighter;
+    line-height: 50%;
+    margin-top:.25em
+}
+
+.login-aligner {
+    position: relative;
+    z-index: 0;
+    top: 0;
+    width:100vw;
+    height: 75vw;
+}
+
+.login-top-bar {
+    grid-column: 1/7;
+    grid-row: 1/2;
+}
+
+.login-bg-wrapper {
+    position: absolute;
+    width:100vw;
+    height: 75vw;
+}
+
+.login-bottom-bar {
+    grid-column: 1/7;
+    grid-row: 5/6;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+.splash-bg {
+    /*position: absolute;*/
+    /*object-fit: cover;*/
     z-index: -1;
     grid-column: 1/7;
+    grid-row: 1/5;
 }
 
-.fb-login-button{
-    display: block;
-    z-index:5;
-    grid-column:5/6;
-    grid-row: 4/5;
+.fb-login-button {
+    position: absolute;
+    z-index: 5;
+
+    right:10%;
+    top: 55%;
 }
 
-h2{
-    font-size: 400%;
+h2 {
+    font-size: 450%;
     line-height: 100%;
     margin:.5em;
+
 }
 
 #actual-site {
     display: none;
 }
+
 #main-container {
     display: flex;
     flex-direction: column;
 }
 
-.main-nav{
+.main-nav {
     display: grid;
     grid-template-columns: 1fr 2fr;
 }
 
-.main-nav-buttons{
-
+.main-nav-buttons {
     /*display: flex;*/
     justify-content: center;
-
 }
 
-.main-nav-buttons > li{
+.main-nav-buttons>li{
     justify-content: center;
     width: 100%;
-    margin:1em;
+    margin: 1em;
 }
 
-.upcoming-datetime{
+.main-nav-buttons  a {
+    justify-content: center;
+}
+
+.upcoming-datetime {
     display: grid;
     grid-template-columns: 1fr .15fr 2fr .15fr 1fr;
     white-space: nowrap;
 }
 
-.upcoming-list-time{
-    grid-column:1/2;
+.upcoming-list-time {
+    grid-column: 1/2;
 }
 
-.upcoming-list-title{
+.upcoming-list-title {
     overflow: hidden;
     grid-column: 3/4;
     text-overflow: ellipsis;
 }
 
-.upcoming-list-place{
-    grid-column:5/6;
+.upcoming-list-place {
+    grid-column: 5/6;
     overflow: hidden;
     text-align: right;
     text-overflow: ellipsis;
@@ -151,19 +266,17 @@ img {
 
 .map-section {
     display: grid;
-    grid-template-columns: 3fr 7fr;
+    grid-template-columns: 2fr 5fr;
     grid-template-rows: 1fr 1fr 1fr;
     height: 75vh;
     background-image: url('/images/gallery9.jpg');
-    background-size: 100vw;
-    background-repeat: no-repeat;
+    background-size:cover;
 }
 
 #map {
-    grid-column: 2/3;
+    grid-column: 1/3;
     grid-row: 1/4;
-    height: 100%;
-    width: 100%;
+
     z-index: 2;
 }
 
@@ -182,25 +295,16 @@ img {
     font-weight: lighter;
 }
 
-.section-nav  {
-    display: inline-block;
-    list-style-type: none;
-    float:right;
-    align-self: flex-end;
+.focusable:focus{
+    background: orange;
 }
 
-.section-nav>li {
-    display: inline;
-    margin: 2em;
-}
 
 /*li {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }*/
-
-
 
 #today {
     color: #2196f3;
@@ -226,11 +330,28 @@ img {
     color: yellow;
 }
 
-#home {
+#title {
     color: white;
-    letter-spacing: 2em;
-    margin-left:1em;
+    letter-spacing: 1em;
     font-weight: lighter;
+    width:100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+#title > span{
+    color:white;
+    font-size: 200%;
+
+}
+
+#tagline {
+    color: white;
+    font-weight: lighter;
+}
+
+#home {
+    margin-left: 1em;
 }
 
 .gallery-img {
@@ -247,12 +368,10 @@ img {
 
 .upcoming-info {
     color: yellow;
-
 }
 
 .upcoming-info-body {
-
-    background: rgba(0,0,0,.2);
+    background: rgba(0, 0, 0, .2);
 }
 
 #no-events {
@@ -266,26 +385,6 @@ img {
     color: white;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 #loader-wrapper {
     position: fixed;
     top: 0;
@@ -294,6 +393,7 @@ img {
     height: 100%;
     z-index: 1000;
 }
+
 #loader {
     display: block;
     position: relative;
@@ -305,119 +405,145 @@ img {
     border-radius: 50%;
     border: 3px solid transparent;
     border-top-color: #3498db;
-
-    -webkit-animation: spin 2s linear infinite; /* Chrome, Opera 15+, Safari 5+ */
-    animation: spin 2s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */
-
+    -webkit-animation: spin 2s linear infinite;
+    /* Chrome, Opera 15+, Safari 5+ */
+    animation: spin 2s linear infinite;
+    /* Chrome, Firefox 16+, IE 10+, Opera */
     z-index: 1001;
 }
 
-    #loader:before {
-        content: "";
-        position: absolute;
-        top: 5px;
-        left: 5px;
-        right: 5px;
-        bottom: 5px;
-        border-radius: 50%;
-        border: 3px solid transparent;
-        border-top-color: #e74c3c;
+#loader:before {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    bottom: 5px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: #e74c3c;
+    -webkit-animation: spin 3s linear infinite;
+    /* Chrome, Opera 15+, Safari 5+ */
+    animation: spin 3s linear infinite;
+    /* Chrome, Firefox 16+, IE 10+, Opera */
+}
 
-        -webkit-animation: spin 3s linear infinite; /* Chrome, Opera 15+, Safari 5+ */
-        animation: spin 3s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */
+#loader:after {
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    right: 15px;
+    bottom: 15px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: #f9c922;
+    -webkit-animation: spin 1.5s linear infinite;
+    /* Chrome, Opera 15+, Safari 5+ */
+    animation: spin 1.5s linear infinite;
+    /* Chrome, Firefox 16+, IE 10+, Opera */
+}
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        /* Chrome, Opera 15+, Safari 3.1+ */
+        -ms-transform: rotate(0deg);
+        /* IE 9 */
+        transform: rotate(0deg);
+        /* Firefox 16+, IE 10+, Opera */
     }
-
-    #loader:after {
-        content: "";
-        position: absolute;
-        top: 15px;
-        left: 15px;
-        right: 15px;
-        bottom: 15px;
-        border-radius: 50%;
-        border: 3px solid transparent;
-        border-top-color: #f9c922;
-
-        -webkit-animation: spin 1.5s linear infinite; /* Chrome, Opera 15+, Safari 5+ */
-          animation: spin 1.5s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */
+    100% {
+        -webkit-transform: rotate(360deg);
+        /* Chrome, Opera 15+, Safari 3.1+ */
+        -ms-transform: rotate(360deg);
+        /* IE 9 */
+        transform: rotate(360deg);
+        /* Firefox 16+, IE 10+, Opera */
     }
+}
 
-    @-webkit-keyframes spin {
-        0%   {
-            -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-            -ms-transform: rotate(0deg);  /* IE 9 */
-            transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
-        }
-        100% {
-            -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-            -ms-transform: rotate(360deg);  /* IE 9 */
-            transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
-        }
+@keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        /* Chrome, Opera 15+, Safari 3.1+ */
+        -ms-transform: rotate(0deg);
+        /* IE 9 */
+        transform: rotate(0deg);
+        /* Firefox 16+, IE 10+, Opera */
     }
-    @keyframes spin {
-        0%   {
-            -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-            -ms-transform: rotate(0deg);  /* IE 9 */
-            transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
-        }
-        100% {
-            -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-            -ms-transform: rotate(360deg);  /* IE 9 */
-            transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
-        }
+    100% {
+        -webkit-transform: rotate(360deg);
+        /* Chrome, Opera 15+, Safari 3.1+ */
+        -ms-transform: rotate(360deg);
+        /* IE 9 */
+        transform: rotate(360deg);
+        /* Firefox 16+, IE 10+, Opera */
     }
+}
 
-    #loader-wrapper .loader-section {
-        position: fixed;
-        top: 0;
-        width: 50%;
-        height: 100%;
-        background: rgba(5,5,5,.95);
-        z-index: 1000;
-        -webkit-transform: translateX(0);  /* Chrome, Opera 15+, Safari 3.1+ */
-        -ms-transform: translateX(0);  /* IE 9 */
-        transform: translateX(0);  /* Firefox 16+, IE 10+, Opera */
-    }
+#loader-wrapper .loader-section {
+    position: fixed;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    background: rgba(5, 5, 5, .95);
+    z-index: 1000;
+    -webkit-transform: translateX(0);
+    /* Chrome, Opera 15+, Safari 3.1+ */
+    -ms-transform: translateX(0);
+    /* IE 9 */
+    transform: translateX(0);
+    /* Firefox 16+, IE 10+, Opera */
+}
 
-    #loader-wrapper .loader-section.section-left {
-        left: 0;
-    }
+#loader-wrapper .loader-section.section-left {
+    left: 0;
+}
 
-    #loader-wrapper .loader-section.section-right {
-        right: 0;
-    }
+#loader-wrapper .loader-section.section-right {
+    right: 0;
+}
 
-    /* Loaded */
-    .loaded #loader-wrapper .loader-section.section-left {
-        -webkit-transform: translateX(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
-            -ms-transform: translateX(-100%);  /* IE 9 */
-                transform: translateX(-100%);  /* Firefox 16+, IE 10+, Opera */
 
-        -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
-                transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
-    }
+/* Loaded */
 
-    .loaded #loader-wrapper .loader-section.section-right {
-        -webkit-transform: translateX(100%);  /* Chrome, Opera 15+, Safari 3.1+ */
-            -ms-transform: translateX(100%);  /* IE 9 */
-                transform: translateX(100%);  /* Firefox 16+, IE 10+, Opera */
+.loaded #loader-wrapper .loader-section.section-left {
+    -webkit-transform: translateX(-100%);
+    /* Chrome, Opera 15+, Safari 3.1+ */
+    -ms-transform: translateX(-100%);
+    /* IE 9 */
+    transform: translateX(-100%);
+    /* Firefox 16+, IE 10+, Opera */
+    -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+}
 
--webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
-        transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
-    }
+.loaded #loader-wrapper .loader-section.section-right {
+    -webkit-transform: translateX(100%);
+    /* Chrome, Opera 15+, Safari 3.1+ */
+    -ms-transform: translateX(100%);
+    /* IE 9 */
+    transform: translateX(100%);
+    /* Firefox 16+, IE 10+, Opera */
+    -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+}
 
-    .loaded #loader {
-        opacity: 0;
-        -webkit-transition: all 0.3s ease-out;
-                transition: all 0.3s ease-out;
-    }
-    .loaded #loader-wrapper {
-        visibility: hidden;
+.loaded #loader {
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+}
 
-        -webkit-transform: translateY(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
-            -ms-transform: translateY(-100%);  /* IE 9 */
-                transform: translateY(-100%);  /* Firefox 16+, IE 10+, Opera */
-
-        -webkit-transition: all 0.3s 1s ease-out;
-                transition: all 0.3s 1s ease-out;
-    }
+.loaded #loader-wrapper {
+    visibility: hidden;
+    -webkit-transform: translateY(-100%);
+    /* Chrome, Opera 15+, Safari 3.1+ */
+    -ms-transform: translateY(-100%);
+    /* IE 9 */
+    transform: translateY(-100%);
+    /* Firefox 16+, IE 10+, Opera */
+    -webkit-transition: all 0.3s 1s ease-out;
+    transition: all 0.3s 1s ease-out;
+}
