--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,7 @@
 @media (max-width: 700px) {
+    .fb-login-button {
+        width: auto;
+    }
     .main-nav {
         display: grid;
         grid-template-rows: .25fr 1fr;
@@ -13,15 +16,12 @@
         display: grid;
         grid-template-rows: repeat(4, 1fr);
         grid-template-columns: 1fr;
-        grid-row:2/3;
-        grid-column:1/2;
+        grid-row: 2/3;
+        grid-column: 1/2;
     }
-    .main-nav-buttons>li,a {
+    .main-nav-buttons>li, a {
         margin: 0;
-        width:95vw;
-    }
-    .fb-login-button{
-        width:auto;
+        width: 95vw;
     }
     #main-nav-about {
         grid-row: 1/2;
@@ -35,16 +35,15 @@
     #main-nav-today {
         grid-row: 4/5;
     }
-    .section-nav li{
-        grid-row:span1;
+    .section-nav li {
+        grid-row: span1;
     }
     .section-nav {
-        width:100%;
+        width: 100%;
         display: grid;
-        grid-template-rows: repeat(4,1fr);;
+        grid-template-rows: repeat(4, 1fr);
     }
 }
-
 @media (max-width: 1200px) and (min-width:700px) {
     .main-nav {
         display: grid;
@@ -68,19 +67,18 @@
         display: flex;
         justify-content: center;
     }
-    #title span{
-        text-align:center;
+    #title span {
+        text-align: center;
         justify-content: center;
     }
     .section-nav {
-        width:100%;
+        width: 100%;
         display: flex;
         justify-content: space-between;
     }
 }
-
 @media (min-width: 1200px) {
-    .main-nav{
+    .main-nav {
         grid-template-columns: 1fr 2fr;
     }
     .main-nav-buttons {
@@ -88,11 +86,10 @@
         grid-column: 2/3;
         justify-content: space-between;
     }
-
-        .main-nav-buttons li{
-            justify-content: center;
-        }
-    #title{
+    .main-nav-buttons li {
+        justify-content: center;
+    }
+    #title {
         grid-column: 1/2;
     }
     .section-nav {
@@ -101,17 +98,23 @@
         float: right;
         align-self: flex-end;
     }
-
     .section-nav>li {
         margin: 2em;
     }
-
 }
+
 
 * {
-    /*border: 1px dotted pink;*/
     color: red;
 }
+img {
+    width: 100vw;
+}
+.focusable, .focusable div, span {
+    font-family: 'Raleway', sans-serif;
+}
+
+/*login page*/
 
 #login-splash {
     display: grid;
@@ -120,63 +123,42 @@
     height: 100vh;
     background: black;
 }
-
-.map-bg{
-    height:100%;
-}
-
 .login-main-bar {
     grid-column: 1/7;
     grid-row: 1/6;
     z-index: 1;
     position: absolute;
-
 }
-
 .login-title {
-    /*position: absolute;
-    color: black;
-    letter-spacing: .75em;
-    font-size: 15em;
-    font-weight: lighter;
-    line-height: 50%;
-    width: 100vw;
-    text-align: justify;*/
     display: flex;
     justify-content: space-between;
     width: 95vw;
     position: absolute;
-    left:2.5vw;
-
+    left: 2.5vw;
 }
-
 .login-title>span {
     color: black;
     font-size: 450%;
     font-weight: lighter;
     line-height: 50%;
-    margin-top:.25em
+    margin-top: .25em
 }
-
 .login-aligner {
     position: relative;
     z-index: 0;
     top: 0;
-    width:100vw;
+    width: 100vw;
     height: 75vw;
 }
-
 .login-top-bar {
     grid-column: 1/7;
     grid-row: 1/2;
 }
-
 .login-bg-wrapper {
     position: absolute;
-    width:100vw;
+    width: 100vw;
     height: 75vw;
 }
-
 .login-bottom-bar {
     grid-column: 1/7;
     grid-row: 5/6;
@@ -184,29 +166,22 @@
     flex-direction: column;
     flex-grow: 1;
 }
-
 .splash-bg {
-    /*position: absolute;*/
-    /*object-fit: cover;*/
     z-index: -1;
     grid-column: 1/7;
     grid-row: 1/5;
 }
-
 .fb-login-button {
     position: absolute;
     z-index: 5;
-
-    right:10%;
+    right: 10%;
     top: 55%;
 }
 
-h2 {
-    font-size: 450%;
-    line-height: 100%;
-    margin:.5em;
 
-}
+/*main site*/
+
+/*nav*/
 
 #actual-site {
     display: none;
@@ -216,53 +191,40 @@ h2 {
     display: flex;
     flex-direction: column;
 }
-
 .main-nav {
     display: grid;
     grid-template-columns: 1fr 2fr;
 }
-
 .main-nav-buttons {
     /*display: flex;*/
     justify-content: center;
 }
-
-.main-nav-buttons>li{
+.main-nav-buttons>li {
     justify-content: center;
     width: 100%;
     margin: 1em;
 }
-
-.main-nav-buttons  a {
+.main-nav-buttons a {
     justify-content: center;
 }
-
-.upcoming-datetime {
-    display: grid;
-    grid-template-columns: 1fr .15fr 2fr .15fr 1fr;
-    white-space: nowrap;
+#title {
+    color: white;
+    letter-spacing: 1em;
+    font-weight: lighter;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+#title>span {
+    color: white;
+    font-size: 200%;
+}
+#home {
+    margin-left: 1em;
 }
 
-.upcoming-list-time {
-    grid-column: 1/2;
-}
 
-.upcoming-list-title {
-    overflow: hidden;
-    grid-column: 3/4;
-    text-overflow: ellipsis;
-}
-
-.upcoming-list-place {
-    grid-column: 5/6;
-    overflow: hidden;
-    text-align: right;
-    text-overflow: ellipsis;
-}
-
-img {
-    width: 100vw;
-}
+/*map*/
 
 .map-section {
     display: grid;
@@ -270,95 +232,59 @@ img {
     grid-template-rows: 1fr 1fr 1fr;
     height: 75vh;
     background-image: url('/images/gallery9.jpg');
-    background-size:cover;
+    background-size: cover;
 }
-
+.map-bg {
+    height: 100%;
+}
 #map {
     grid-column: 1/3;
     grid-row: 1/4;
-
     z-index: 2;
 }
-
 .info-window-img {
     width: 20em;
 }
+
+/*content sections*/
 
 .each-header-section-nav {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
-
 .header {
     display: inline-block;
     font-weight: lighter;
 }
-
-.focusable:focus{
-    background: orange;
+h2 {
+    font-size: 450%;
+    line-height: 100%;
+    margin: .5em;
 }
-
-
-/*li {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}*/
-
 #today {
     color: #2196f3;
 }
-
 .today-nav a {
     color: red;
 }
-
-#about {
+#no-events {
+    text-align: center;
+    background: white;
+}
+.outofboundsalert {
+    font-style: italic;
+    text-align: center;
     color: white;
 }
 
 #places {
     color: yellow;
 }
-
-#upcoming {
-    color: red;
-}
-
-.upcoming-nav a {
-    color: yellow;
-}
-
-#title {
-    color: white;
-    letter-spacing: 1em;
-    font-weight: lighter;
-    width:100%;
-    display: flex;
-    justify-content: space-around;
-}
-
-#title > span{
-    color:white;
-    font-size: 200%;
-
-}
-
-#tagline {
-    color: white;
-    font-weight: lighter;
-}
-
-#home {
-    margin-left: 1em;
-}
-
 .gallery-img {
     width: 96%;
     margin: 2%;
 }
-
 .gallery-info {
     line-height: 125%;
     color: white;
@@ -366,24 +292,44 @@ img {
     margin: 2%;
 }
 
+#upcoming {
+    color: red;
+}
+.upcoming-nav a {
+    color: yellow;
+}
+.upcoming-datetime {
+    display: grid;
+    grid-template-columns: 1fr .15fr 2fr .15fr 1fr;
+    white-space: nowrap;
+}
+.upcoming-list-time {
+    grid-column: 1/2;
+}
+.upcoming-list-title {
+    overflow: hidden;
+    grid-column: 3/4;
+    text-overflow: ellipsis;
+}
+.upcoming-list-place {
+    grid-column: 5/6;
+    overflow: hidden;
+    text-align: right;
+    text-overflow: ellipsis;
+}
 .upcoming-info {
     color: yellow;
 }
-
 .upcoming-info-body {
     background: rgba(0, 0, 0, .2);
 }
 
-#no-events {
-    text-align: center;
-    background: white;
-}
-
-.outofboundsalert {
-    font-style: italic;
-    text-align: center;
+#about {
     color: white;
 }
+
+
+/* preloader: */
 
 #loader-wrapper {
     position: fixed;
@@ -393,7 +339,6 @@ img {
     height: 100%;
     z-index: 1000;
 }
-
 #loader {
     display: block;
     position: relative;
@@ -406,12 +351,9 @@ img {
     border: 3px solid transparent;
     border-top-color: #3498db;
     -webkit-animation: spin 2s linear infinite;
-    /* Chrome, Opera 15+, Safari 5+ */
     animation: spin 2s linear infinite;
-    /* Chrome, Firefox 16+, IE 10+, Opera */
     z-index: 1001;
 }
-
 #loader:before {
     content: "";
     position: absolute;
@@ -423,11 +365,8 @@ img {
     border: 3px solid transparent;
     border-top-color: #e74c3c;
     -webkit-animation: spin 3s linear infinite;
-    /* Chrome, Opera 15+, Safari 5+ */
     animation: spin 3s linear infinite;
-    /* Chrome, Firefox 16+, IE 10+, Opera */
 }
-
 #loader:after {
     content: "";
     position: absolute;
@@ -439,49 +378,32 @@ img {
     border: 3px solid transparent;
     border-top-color: #f9c922;
     -webkit-animation: spin 1.5s linear infinite;
-    /* Chrome, Opera 15+, Safari 5+ */
     animation: spin 1.5s linear infinite;
-    /* Chrome, Firefox 16+, IE 10+, Opera */
 }
-
 @-webkit-keyframes spin {
     0% {
         -webkit-transform: rotate(0deg);
-        /* Chrome, Opera 15+, Safari 3.1+ */
         -ms-transform: rotate(0deg);
-        /* IE 9 */
         transform: rotate(0deg);
-        /* Firefox 16+, IE 10+, Opera */
     }
     100% {
         -webkit-transform: rotate(360deg);
-        /* Chrome, Opera 15+, Safari 3.1+ */
         -ms-transform: rotate(360deg);
-        /* IE 9 */
         transform: rotate(360deg);
-        /* Firefox 16+, IE 10+, Opera */
     }
 }
-
 @keyframes spin {
     0% {
         -webkit-transform: rotate(0deg);
-        /* Chrome, Opera 15+, Safari 3.1+ */
         -ms-transform: rotate(0deg);
-        /* IE 9 */
         transform: rotate(0deg);
-        /* Firefox 16+, IE 10+, Opera */
     }
     100% {
         -webkit-transform: rotate(360deg);
-        /* Chrome, Opera 15+, Safari 3.1+ */
         -ms-transform: rotate(360deg);
-        /* IE 9 */
         transform: rotate(360deg);
-        /* Firefox 16+, IE 10+, Opera */
     }
 }
-
 #loader-wrapper .loader-section {
     position: fixed;
     top: 0;
@@ -490,60 +412,39 @@ img {
     background: rgba(5, 5, 5, .95);
     z-index: 1000;
     -webkit-transform: translateX(0);
-    /* Chrome, Opera 15+, Safari 3.1+ */
     -ms-transform: translateX(0);
-    /* IE 9 */
     transform: translateX(0);
-    /* Firefox 16+, IE 10+, Opera */
 }
-
 #loader-wrapper .loader-section.section-left {
     left: 0;
 }
-
 #loader-wrapper .loader-section.section-right {
     right: 0;
 }
-
-
-/* Loaded */
-
 .loaded #loader-wrapper .loader-section.section-left {
     -webkit-transform: translateX(-100%);
-    /* Chrome, Opera 15+, Safari 3.1+ */
     -ms-transform: translateX(-100%);
-    /* IE 9 */
     transform: translateX(-100%);
-    /* Firefox 16+, IE 10+, Opera */
     -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
     transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
 }
-
 .loaded #loader-wrapper .loader-section.section-right {
     -webkit-transform: translateX(100%);
-    /* Chrome, Opera 15+, Safari 3.1+ */
     -ms-transform: translateX(100%);
-    /* IE 9 */
     transform: translateX(100%);
-    /* Firefox 16+, IE 10+, Opera */
     -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
     transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
 }
-
 .loaded #loader {
     opacity: 0;
     -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
 }
-
 .loaded #loader-wrapper {
     visibility: hidden;
     -webkit-transform: translateY(-100%);
-    /* Chrome, Opera 15+, Safari 3.1+ */
     -ms-transform: translateY(-100%);
-    /* IE 9 */
     transform: translateY(-100%);
-    /* Firefox 16+, IE 10+, Opera */
     -webkit-transition: all 0.3s 1s ease-out;
     transition: all 0.3s 1s ease-out;
 }
