--- a/styles/main.css
+++ b/styles/main.css
@@ -327,8 +327,8 @@ img {
     z-index: 2;
 }
 .info-window-img {
-    width: 50%;
-    height:50%;
+    width: 100%;
+    height:100%;
 }
 
 /*content sections*/
@@ -393,19 +393,19 @@ h2 {
 }
 .upcoming-datetime {
     display: grid;
-    grid-template-columns: 1fr .15fr 2fr .15fr 1fr;
+    grid-template-columns: .125fr 1fr .15fr 2fr .15fr 1fr;
     white-space: nowrap;
 }
 .upcoming-list-time {
-    grid-column: 1/2;
+    grid-column: 2/3;
 }
 .upcoming-list-title {
     overflow: hidden;
-    grid-column: 3/4;
+    grid-column: 4/5;
     text-overflow: ellipsis;
 }
 .upcoming-list-place {
-    grid-column: 5/6;
+    grid-column: 6/7;
     overflow: hidden;
     text-align: right;
     text-overflow: ellipsis;
